refactor: organize docs, move vendor hooks, clean up unused files
- Consolidate all docs into docs/ folder
- Move vendor-files/ to frontend/src/hooks/
- Remove unused files (NotificationBell, image.png, App.css)
- Update .gitignore to ignore .md files (except root README.md)
- Remove node_modules from git tracking

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ out
 # Temporary files
 *.tmp
 *.temp
+
+# Documentation files (ignore .md files except root README.md to avoid counting as code lines)
+*.md
+!README.md
