--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -23,14 +23,7 @@
     /* Path mapping */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/utils/*": ["src/utils/*"],
-      "@/types/*": ["src/types/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/services/*": ["src/services/*"],
-      "@/contexts/*": ["src/contexts/*"],
-      "@/pages/*": ["src/pages/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["src", "src/vite-env.d.ts"],
