feat: Implement Vendor Orders Kanban Board with drag-and-drop
- Add Kanban board component (VendorOrdersKanban) with drag-and-drop functionality
- Add OrderCard component for reusable order cards
- Add OrderDetailPanel slide-over for order details
- Implement OrderProvider context for centralized state management
- Add IOrderRepository interface for repository pattern
- Add TypeScript types for orders, order items, and statuses
- Add reconciliation utility for optimistic update rollback
- Update Orders page to use new Kanban components
- Integrate OrderProvider into VendorDashboard
- Update demoOrderRepository with real-time subscriptions
- Install @dnd-kit libraries for drag-and-drop support

Features:
- Drag-and-drop orders between columns (NEW, IN_PROGRESS, READY)
- Optimistic UI updates with automatic rollback on errors
- Real-time order updates via subscriptions
- Order detail panel with items table, totals, and event log
- Status-based action buttons
- Keyboard accessible and responsive design
- Type-safe order management with strict TypeScript types

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,9 @@
   "author": "Aman",
   "license": "MIT",
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-query": "^5.90.7",
