--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,10 +34,12 @@
     "@react-google-maps/api": "^2.20.7",
     "@supabase/supabase-js": "^2.38.0",
     "@tanstack/react-query": "^5.90.7",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
+    "recharts": "^3.3.0",
     "tailwindcss": "^3.3.0",
     "use-places-autocomplete": "^4.0.1"
   },
