feat: migrate vendor dashboard, analytics, and storefront UI
- Port rich vendor dashboard, orders, inventory, payments, analytics, and storefront pages from Migration_Data into the current frontend, wired to existing hooks and Supabase.

- Add supporting analytics components, customer bottom nav, routing updates, and database SQL docs, and ignore Migration_Data as reference-only for future backend/data work.

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ out
 
 # Archived reference repository
 .archive/dawn-of-app-craft/
+
+# Migration reference source (do not include in final app)
+Migration_Data/
